# Glom

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  clear.sh  flake.nix  test.sh
include/: context.h  error.h  eval.h  expr.h  module.h  parser.h  primitive.h  tokenizer.h  type.h
src/: CMakeLists.txt  bigint.cpp  context.cpp  error.cpp  eval.cpp  expr.cpp  main.cpp  module.cpp  number.cpp  parser.cpp  parser.h  primitive.cpp  tokenizer.cpp  tokenizer.h
src/primitives/: condition.cpp  delay.cpp  equal.cpp  evaluate_control.cpp  io.cpp  lambda.cpp  list.cpp  logic_operation.cpp  math.cpp  module.cpp  mutable.cpp  new_bindings.cpp  number_comparator.cpp  number_operation.cpp  number_utils.cpp  quote.cpp  type.cpp  util.cpp
tests/: CMakeLists.txt  auto_discover_tests.cmake  eval_delay.cpp  eval_eval_control.cpp  eval_list.cpp  eval_math_functions.cpp  eval_module.cpp  eval_mutable.cpp  eval_number_comparators.cpp  eval_number_operations.cpp  eval_number_utils.cpp  eval_primitives.cpp  eval_types.cpp  parser.cpp  tokenizer.cpp
